# openapi-codegen

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  flake.nix  requirements.in  requirements.txt
.github/workflows/: ci.yml
src/: args.rs  entrypoint.rs  main.rs
src/codegen/: api_client.py  functions.rs  imports.py  methods.rs  mod.rs  module.rs  types.rs
src/parse/: error.rs  field.rs  function.rs  mod.rs  responses.rs  security_schemes.rs  struct.rs  type.rs
