[package]
name = "openapi_codegen"
description = "Generate well-typed code from an OpenAPI spec"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Charles Hall <charles@computer.surgery>",
]

[dependencies]
backtrace = "0.3.65"
clap = { version = "3", features = ["derive"] }
heck = "0.4"
okapi = "0.7.0-rc.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1.0.31"
